# GPeT

./: .gitignore  README.md  config.yaml  prepare_data.py  pyproject.toml  train.py  utils.py
config/: base.yaml
gpet/: cli.py  config.py  lightning.py
