[tool.poetry]
name = "gpet"
version = "0.1.0"
description = ""
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
torch = "^2.1.0"
torchvision = "^0.16.0"
ipython = "^8.16.1"
bpemb = "^0.3.4"
jupyter = "^1.0.0"
numpy = "^1.26.0"
lightning = "^2.1.0"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
